src/objects/Class__c.object
<CustomObject>
    <fields>
        <fullName>Available__c</fullName>
        <label>Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Students__c</fullName>
        <label>No of Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student_Count__c</fullName>
        <label>Student Count</label>
        <summaryForeignKey>Student__c.Class__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Class</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Available__c</columns>
        <columns>No_of_Students__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>TestQueue_Class</fullName>
        <filterScope>Queue</filterScope>
        <label>TestQueue</label>
        <queue>TestQueue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Class - {0000}</displayFormat>
        <label>Class</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Prevent_related_list_deletion</fullName>
        <active>false</active>
        <description>VR to Prevent related list deletion</description>
        <errorConditionFormula>PRIORVALUE( Student_Count__c ) &lt;&gt; Student_Count__c</errorConditionFormula>
        <errorMessage>Prevent related list deletion</errorMessage>
    </validationRules>
</CustomObject>